# bookgeo-agent

./: .env.example  LICENSE  README.md  pyproject.toml
bookgeo/: __init__.py  agent_graph.py  cli.py  config.py  geocode.py  ingest.py  lang_detect.py  llm_extract.py  llm_pipeline.py  models.py  ner.py  pipeline.py  utils.py  validator.py
bookgeo/samples/: sample_book_en.txt  sample_book_es.txt  surf_es.txt
bookgeo/tests/: test_geocode.py  test_lang_detect.py  test_ner.py  test_pipeline.py
